# dahdi-tools-xrg

./: .gitignore  ChangeLog  Makefile  README  UPGRADE.txt  acinclude.m4  blacklist.sample  configure  configure.ac  dahdi-tools.spec  dahdi.init  dahdi.rules  dahdi.xml  dahdi_cfg.c  dahdi_diag.c  dahdi_monitor.c  dahdi_scan.c  dahdi_speed.c  dahdi_test.c  dahdi_tool.c  fxotune.c  fxotune.h  fxstest.c  hdlcgen.c  hdlcstress.c  hdlctest.c  hdlcverify.c  init.conf  init.conf.sample  makeopts.in  modprobe.conf.sample  modules.sample  patgen.c  patlooptest.c  pattest.c  sethdlc.c  system.conf.sample  timertest.c  tonezone.c  tonezone.h  (+2 more)
build_tools/: genmodconf  genudevrules  make_version_h  menuselect-deps.in
doc/: dahdi_cfg.8  dahdi_diag.8  dahdi_monitor.8  dahdi_scan.8  dahdi_test.8  fxotune.8
ppp/: dahdi.c  zaptel.c
trunk/: .gitignore  Makefile  README  configure  configure.ac  dahdi.init  dahdi.xml  dahdi_cfg.c  dahdi_diag.c  dahdi_monitor.c  dahdi_scan.c  dahdi_test.c  dahdi_tool.c  fxotune.c  fxstest.c  hdlcgen.c  hdlcstress.c  hdlcverify.c  modules.sample  patgen.c  patlooptest.c  pattest.c  sethdlc.c  system.conf.sample  timertest.c  tonezone.h
trunk/doc/: system.conf
trunk/ppp/: Makefile
trunk/xpp/: dahdi_genconf  dahdi_registration  genconf_parameters  genzaptelconf.8  lsdahdi  xpp_fxloader  xpp_sync
trunk/xpp/perl_modules/: Zaptel.pm
trunk/xpp/perl_modules/Dahdi/: Span.pm  Utils.pm  Xpp.pm
trunk/xpp/perl_modules/Dahdi/Config/: Defaults.pm  GenconfDefaults.pm
trunk/xpp/perl_modules/Dahdi/Hardware/: PCI.pm
trunk/xpp/perl_modules/Dahdi/Xpp/: Line.pm  Xbus.pm  Xpd.pm
trunk/xpp/perl_modules/Zaptel/Xpp/: Xpd.pm
trunk/xpp/zconf/Zaptel/: Span.pm
xpp/: .gitignore  Makefile  dahdi_drivers  dahdi_genconf  dahdi_hardware  genconf_parameters  genzaptelconf  lsdahdi  xpp_fxloader
xpp/perl_modules/: Dahdi.pm
xpp/perl_modules/Dahdi/: Chans.pm  Hardware.pm  Span.pm  Xpp.pm
xpp/perl_modules/Dahdi/Config/: GenconfDefaults.pm
xpp/perl_modules/Dahdi/Hardware/: PCI.pm  USB.pm
xpp/perl_modules/Dahdi/Xpp/: Xpd.pm
